--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,7 +14,7 @@ body {
 .App{
     width :100vw ;
     height: 100vh;
-    background-color: rgba(103, 17, 179, 0.13);
+    background-color: rgba(148, 112, 180, 0.13);
     margin : 0 ;
 }
 a{
@@ -31,3 +31,5 @@ button {
 }
 
 @import url("./components/Header/Header.css");
+
+@import url("./components/mainpages/products/products.css")
