--- a/client/src/App.css
+++ b/client/src/App.css
@@ -35,3 +35,5 @@ button {
 @import url("./components/mainpages/products/products.css");
 
 @import url("./components/mainpages/auth/login.css");
+
+@import url("./components/mainpages/cart/cart.css")
